--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "server",
+  "name": "moontalk",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
