--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,21 @@
     "routes": [
      {
       "src": "/(.*)",
-      "dest": "app.js"
+      "dest": "app.js",
+      "headers": [
+            {
+              "key": "Access-Control-Allow-Origin",
+              "value": "https://moonlab.top"
+            },
+            {
+              "key": "Access-Control-Allow-Methods",
+              "value": "GET,POST,PUT,DELETE,OPTIONS"
+            },
+            {
+              "key": "Access-Control-Allow-Headers",
+              "value": "Content-Type, Authorization"
+            }
+      ]
      }
     ]
    }
