--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
-    "cors": "^2.8.5",
+    "@koa/cors": "^5.0.0",
+    "@koa/router": "^12.0.1",
     "dompurify": "^3.2.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "jsdom": "^26.1.0"
+    "jsdom": "^26.1.0",
+    "koa": "^2.15.0",
+    "koa-bodyparser": "^4.4.1",
+    "koa-send": "^5.0.0",
+    "koa-static": "^5.0.0"
   }
 }
