--- a/vercel.json
+++ b/vercel.json
@@ -16,22 +16,7 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "app.js",
-        "headers": {
-          "Access-Control-Allow-Origin": "https://moonlab.top,http://lycois.org",
-          "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
-          "Access-Control-Allow-Headers": "Content-Type, Authorization"
-        }
-      },
-      {
-        "src": "/(.*)",
-        "methods": ["OPTIONS"],
-        "headers": {
-          "Access-Control-Allow-Origin": "https://moonlab.top,http://lycois.org",
-          "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
-          "Access-Control-Allow-Headers": "Content-Type, Authorization"
-        },
-        "continue": true
+        "dest": "app.js"
       }
     ]
   }
